# rhoai-in-kind

./: README.md  pyproject.toml  test-variables.yml
.github/workflows/: rhoai-in-kind-with-cypress.yaml  rhoai-in-kind-with-odh-tests-shiftleft.yaml  rhoai-in-kind-with-ods-ci.yaml  rhoai-in-kind.yaml
components/: 00-kind-cluster.yaml  03-kf-pipelines.yaml  04-odh-dashboard.yaml  06-gateway.yaml  07-dsc-dsci.yaml  11-coredns.yaml  certs.py  deploy.py  logs.py  patch-workbench-resource-requests.sh
components/01-argocd/: README.md  gittimeoutconfig.yaml  kustomization.yaml
components/02-kyverno/: imagestream-status-policy.yaml  kustomization.yaml  notebook-routes-policy.yaml  pipelines-routes-policy.yaml  policy.yaml
components/05-ca-operator/: Dockerfile  README.md  kustomization.yaml  manifests.yaml
components/08-workbenches/: code-server.yaml  kustomization.yaml  minimal.yaml
components/09-kf-notebooks/: culler-config.yaml  kustomization.yaml
components/10-minio/: deploy.yaml
components/api-extension/: DEVELOPMENT.md  Dockerfile  README.md  deploy.sh  go.mod  go.sum  local.Dockerfile  service.yaml
components/crds/: buildconfig.yaml  clusterserviceversion.yaml  components.platform.opendatahub.io_dashboards.yaml  consoleclidownload.yaml  consolelink.yaml  dsc.yaml  dsci.yaml  imagestream.yaml  kustomization.yaml  oc-cli-downloads-instance.yaml  route.yaml  servicemonitor.yaml
components/elyra-e2e/: .babelrc.json  .eslintrc.js  .prettierrc  babel-goto-plugin.ts  fromHere.ts  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  (+2 more)
ods-ci/: test-variables.yml
(+28 files in other folders)
